2006-01-02  Stefan Jahn  <stefan@lkcc.org>

	* coupler.h (class coupler): Implemented new component: ideal
	coupler.

2005-12-19  Stefan Jahn  <stefan@lkcc.org>

	* devices/device.h (class device): Documented device
	functions in the header file.  Simplified the split
	functionality for devices.  Changed all callers.

2005-12-18  Stefan Jahn  <stefan@lkcc.org>

	* digital/digital.cpp: Fixed wrong derivative of digital
	components.

	* devices/mosfet.cpp: Implemented temperature model.

	* devices/jfet.cpp: Implemented area and temperature model.

	* devices/device.cpp: Added some temperature functions for
	device models.

	* devices/bjt.cpp: Implemented area and temperature model.

2005-12-11  Stefan Jahn  <stefan@lkcc.org>

	* devices/device.cpp (intrinsicDensity, Egap): Added functions
	for temperature dependencies of energy bandgap and intrinsic
	density.

	* devices/diode.cpp: Implemented temperature and area
	dependencies of the diode model.

	* digital/digital.cpp: Fixed numerical problems of non-linear
	digital components during transient simlation.  Also fixed
	bug in AC and SP simulations.

2005-12-03  Stefan Jahn  <stefan@lkcc.org>

	* digital/digisource.h (class digisource): Added new component:
	the analog model of the digital source.

2005-11-24  Stefan Jahn  <stefan@lkcc.org>

	* digital/and.h (class logicand): Prefixed and, nand, or, nor,
	xor and xnor with 'logic' to avoid clash with ISO C++ reserved
	words.

2005-11-24  Stefan Jahn  <stefan@lkcc.org>

	* digital/xnor.h, digital/xor.h, digital/nand.h, digital/and.h,
	digital/nor.h, digital/or.h, digital/inverter.h: New files
	implementing the analog models of the digital components.

	* digital/digital.h (class digital): Implemented base class
	for multiple digital input circuits.

2005-11-23  Stefan Jahn  <stefan@lkcc.org>

	* mutual2.cpp: Fixed bug in three mutual inductors.  Inductor
	two and three were interchanged during transient analysis.

2005-10-20  Stefan Jahn  <stefan@lkcc.org>
