@@ -1,7 +1,7 @@
 /*
  * digital.cpp - digital base class implementation
  *
- * Copyright (C) 2005 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2005, 2006 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.  
  *
- * $Id: digital.cpp,v 1.4 2005/12/19 07:55:14 raimi Exp $
+ * $Id: digital.cpp,v 1.5 2006/01/11 09:50:07 raimi Exp $
  *
  */
 
@@ -72,17 +72,26 @@ nr_double_t digital::getVin (int input) {
 }
 
 // Computes the transfer function for the given input node.
-nr_double_t digital::calcTransfer (int input) {
+nr_double_t digital::calcTransferX (int input) {
   nr_double_t v = getPropertyDouble ("V");
-  nr_double_t x = tanh (10 * (getVin (input) / v - 0.5));
-  return (1 - GMin) * x;
+  return tanh (10 * (getVin (input) / v - 0.5));
+}
+
+// Computes a slightly modified transfer function.
+nr_double_t digital::calcTransfer (int input) {
+  return (1 - GMin) * calcTransferX (input);
 }
 
 // Computes the transfer functions derivative for the given input node.
-nr_double_t digital::calcDerivative (int input) {
+nr_double_t digital::calcDerivativeX (int input) {
   nr_double_t v = getPropertyDouble ("V");
   nr_double_t x = tanh (10 * (getVin (input) / v - 0.5));
-  return (1 - GMin) * 10 * (1 - x * x);
+  return 10 * (1 - x * x);
+}
+
+// Computes  a slightly modified transfer functions derivative.
+nr_double_t digital::calcDerivative (int input) {
+  return (1 - GMin) * calcDerivativeX (input);
 }
 
 // Setup constant S-parameter entries.
